welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:13: error: not found: value x
    setPos(x, getY+1)
           ^